# CarrotSLAM

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  build.sh  representations.aird
carrotslam/: CMakeLists.txt
carrotslam/core/: CMakeLists.txt  carrot_slam.cpp
carrotslam/core/include/core/: carrot_slam.h  common.h
carrotslam/examples/: CMakeLists.txt
carrotslam/examples/ORB-SLAM/: CMakeLists.txt  main.cpp  orbslam.xml
carrotslam/examples/rgbd_tutor/: CMakeLists.txt  visualOdometry.cpp  visualodometry.xml
carrotslam/nodes/: CMakeLists.txt  LoopClosing.cc  ORBextractor.cc  ORBextractor.cpp  feature_viewer.cpp  orbslam_feature_extracting.cpp  orbslam_optimizer.cpp  orbslam_tracking.cpp1  rgbd_tutorial_vo.cpp  tum_dataset_reader.cpp  tum_dataset_reader_unittest.cpp
carrotslam/nodes/include/nodes/: feature_viewer.h  map.h  map_point.h  orbslam_feature_extracting.h  orbslam_optimizer.h  orbslam_tracking.h  rgbd_tutorial_vo.h  tum_dataset_reader.h
carrotslam/tests/: CMakeLists.txt  tum_dataset_reader_test.cpp
carrotslam/types/: CMakeLists.txt  Camera.h  camera_base.h  covisible_keyframe.cpp  feature.cpp  pinhole_camera.cpp  pinhole_camera.h
carrotslam/types/include/types/: camera_base.h  covisible_keyframe.h  dimage.h  feature.h  frame.h  image.h  map.h  mappoint.h  pinhole_camera.h  point.h
carrotslam/types/src/: pinhole_camera.cpp
cmake/: DeclareAppDependencies.cmake  DeclareCarrotSLAMLib.cmake  script_eigen.cmake  script_gtest.cmake  script_version_number.cmake
doc/: doxysettings.txt
tests/: CMakeLists.txt  test_main.cpp  testing.h
